pkg/dsl/gen/kfn_parser.go
// Code generated from Kfn.g4 by ANTLR 4.7.1. DO NOT EDIT.

package gen // Kfn
import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "';'", "'\n'", "':'", "','", "'and'", "'='", "'with'",
}
var symbolicNames = []string{
	"", "", "", "", "", "", "", "COMPONENT_OPTION_SEP", "UPPER_IDENT", "LOWER_IDENT",
	"STRING_LITERAL", "ARROW", "WS",
}

var ruleNames = []string{
	"kfn", "line", "stmt", "decl", "ident", "wire", "wireStmt", "wireElement",
	"component", "componentIdent", "componentValue", "componentOptionList",
	"componentOption", "componentOptionIdent", "componentOptionValue",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type KfnParser struct {
	*antlr.BaseParser
}

func NewKfnParser(input antlr.TokenStream) *KfnParser {
	this := new(KfnParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "Kfn.g4"

	return this
}

// KfnParser tokens.
const (
	KfnParserEOF                  = antlr.TokenEOF
	KfnParserT__0                 = 1
	KfnParserT__1                 = 2
	KfnParserT__2                 = 3
	KfnParserT__3                 = 4
	KfnParserT__4                 = 5
	KfnParserT__5                 = 6
	KfnParserCOMPONENT_OPTION_SEP = 7
	KfnParserUPPER_IDENT          = 8
	KfnParserLOWER_IDENT          = 9
	KfnParserSTRING_LITERAL       = 10
	KfnParserARROW                = 11
	KfnParserWS                   = 12
)

// KfnParser rules.
const (
	KfnParserRULE_kfn                  = 0
	KfnParserRULE_line                 = 1
	KfnParserRULE_stmt                 = 2
	KfnParserRULE_decl                 = 3
	KfnParserRULE_ident                = 4
	KfnParserRULE_wire                 = 5
	KfnParserRULE_wireStmt             = 6
	KfnParserRULE_wireElement          = 7
	KfnParserRULE_component            = 8
	KfnParserRULE_componentIdent       = 9
	KfnParserRULE_componentValue       = 10
	KfnParserRULE_componentOptionList  = 11
	KfnParserRULE_componentOption      = 12
	KfnParserRULE_componentOptionIdent = 13
	KfnParserRULE_componentOptionValue = 14
)

// IKfnContext is an interface to support dynamic dispatch.
type IKfnContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsKfnContext differentiates from other interfaces.
	IsKfnContext()
}

type KfnContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyKfnContext() *KfnContext {
	var p = new(KfnContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = KfnParserRULE_kfn
	return p
}

func (*KfnContext) IsKfnContext() {}

func NewKfnContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *KfnContext {
	var p = new(KfnContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = KfnParserRULE_kfn

	return p
}

func (s *KfnContext) GetParser() antlr.Parser { return s.parser }

func (s *KfnContext) AllLine() []ILineContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*ILineContext)(nil)).Elem())
	var tst = make([]ILineContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(ILineContext)
		}
	}

	return tst
}

func (s *KfnContext) Line(i int) ILineContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*ILineContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(ILineContext)
}

func (s *KfnContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *KfnContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *KfnContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KfnListener); ok {
		listenerT.EnterKfn(s)
	}
}

func (s *KfnContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KfnListener); ok {
		listenerT.ExitKfn(s)
	}
}

func (s *KfnContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case KfnVisitor:
		return t.VisitKfn(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *KfnParser) Kfn() (localctx IKfnContext) {
	localctx = NewKfnContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, KfnParserRULE_kfn)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(33)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<KfnParserUPPER_IDENT)|(1<<KfnParserLOWER_IDENT)|(1<<KfnParserSTRING_LITERAL))) != 0 {
		{
			p.SetState(30)
			p.Line()
		}

		p.SetState(35)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// ILineContext is an interface to support dynamic dispatch.
type ILineContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsLineContext differentiates from other interfaces.
	IsLineContext()
}

type LineContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyLineContext() *LineContext {
	var p = new(LineContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = KfnParserRULE_line
	return p
}

func (*LineContext) IsLineContext() {}

func NewLineContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *LineContext {
	var p = new(LineContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = KfnParserRULE_line

	return p
}

func (s *LineContext) GetParser() antlr.Parser { return s.parser }

func (s *LineContext) Stmt() IStmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IStmtContext)
}

func (s *LineContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *LineContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *LineContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KfnListener); ok {
		listenerT.EnterLine(s)
	}
}

func (s *LineContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KfnListener); ok {
		listenerT.ExitLine(s)
	}
}

func (s *LineContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case KfnVisitor:
		return t.VisitLine(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *KfnParser) Line() (localctx ILineContext) {
	localctx = NewLineContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, KfnParserRULE_line)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(36)
		p.Stmt()
	}
	p.SetState(38)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == KfnParserT__0 || _la == KfnParserT__1 {
		{
			p.SetState(37)
			_la = p.GetTokenStream().LA(1)

			if !(_la == KfnParserT__0 || _la == KfnParserT__1) {
				p.GetErrorHandler().RecoverInline(p)
			} else {
				p.GetErrorHandler().ReportMatch(p)
				p.Consume()
			}
		}

		p.SetState(40)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IStmtContext is an interface to support dynamic dispatch.
type IStmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsStmtContext differentiates from other interfaces.
	IsStmtContext()
}

type StmtContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStmtContext() *StmtContext {
	var p = new(StmtContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = KfnParserRULE_stmt
	return p
}

func (*StmtContext) IsStmtContext() {}

func NewStmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StmtContext {
	var p = new(StmtContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = KfnParserRULE_stmt

	return p
}

func (s *StmtContext) GetParser() antlr.Parser { return s.parser }

func (s *StmtContext) Decl() IDeclContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IDeclContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IDeclContext)
}

func (s *StmtContext) Wire() IWireContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IWireContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IWireContext)
}

func (s *StmtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StmtContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StmtContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KfnListener); ok {
		listenerT.EnterStmt(s)
	}
}

func (s *StmtContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KfnListener); ok {
		listenerT.ExitStmt(s)
	}
}

func (s *StmtContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case KfnVisitor:
		return t.VisitStmt(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *KfnParser) Stmt() (localctx IStmtContext) {
	localctx = NewStmtContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, KfnParserRULE_stmt)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(44)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 2, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(42)
			p.Decl()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(43)
			p.Wire()
		}

	}

	return localctx
}

// IDeclContext is an interface to support dynamic dispatch.
type IDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsDeclContext differentiates from other interfaces.
	IsDeclContext()
}

type DeclContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDeclContext() *DeclContext {
	var p = new(DeclContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = KfnParserRULE_decl
	return p
}

func (*DeclContext) IsDeclContext() {}

func NewDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DeclContext {
	var p = new(DeclContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = KfnParserRULE_decl

	return p
}

func (s *DeclContext) GetParser() antlr.Parser { return s.parser }

func (s *DeclContext) Ident() IIdentContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IIdentContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IIdentContext)
}

func (s *DeclContext) Component() IComponentContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IComponentContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IComponentContext)
}

func (s *DeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DeclContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KfnListener); ok {
		listenerT.EnterDecl(s)
	}
}

func (s *DeclContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KfnListener); ok {
		listenerT.ExitDecl(s)
	}
}

func (s *DeclContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case KfnVisitor:
		return t.VisitDecl(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *KfnParser) Decl() (localctx IDeclContext) {
	localctx = NewDeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, KfnParserRULE_decl)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(46)
		p.Ident()
	}
	{
		p.SetState(47)
		p.Match(KfnParserT__2)
	}
	{
		p.SetState(48)
		p.Component()
	}

	return localctx
}

// IIdentContext is an interface to support dynamic dispatch.
type IIdentContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsIdentContext differentiates from other interfaces.
	IsIdentContext()
}

type IdentContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyIdentContext() *IdentContext {
	var p = new(IdentContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = KfnParserRULE_ident
	return p
}

func (*IdentContext) IsIdentContext() {}

func NewIdentContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *IdentContext {
	var p = new(IdentContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = KfnParserRULE_ident

	return p
}

func (s *IdentContext) GetParser() antlr.Parser { return s.parser }

func (s *IdentContext) UPPER_IDENT() antlr.TerminalNode {
	return s.GetToken(KfnParserUPPER_IDENT, 0)
}

func (s *IdentContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *IdentContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *IdentContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KfnListener); ok {
		listenerT.EnterIdent(s)
	}
}

func (s *IdentContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KfnListener); ok {
		listenerT.ExitIdent(s)
	}
}

func (s *IdentContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case KfnVisitor:
		return t.VisitIdent(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *KfnParser) Ident() (localctx IIdentContext) {
	localctx = NewIdentContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, KfnParserRULE_ident)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(50)
		p.Match(KfnParserUPPER_IDENT)
	}

	return localctx
}

// IWireContext is an interface to support dynamic dispatch.
type IWireContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsWireContext differentiates from other interfaces.
	IsWireContext()
}

type WireContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyWireContext() *WireContext {
	var p = new(WireContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = KfnParserRULE_wire
	return p
}

func (*WireContext) IsWireContext() {}

func NewWireContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *WireContext {
	var p = new(WireContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = KfnParserRULE_wire

	return p
}

func (s *WireContext) GetParser() antlr.Parser { return s.parser }

func (s *WireContext) WireStmt() IWireStmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IWireStmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IWireStmtContext)
}

func (s *WireContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *WireContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *WireContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KfnListener); ok {
		listenerT.EnterWire(s)
	}
}

func (s *WireContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KfnListener); ok {
		listenerT.ExitWire(s)
	}
}

func (s *WireContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case KfnVisitor:
		return t.VisitWire(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *KfnParser) Wire() (localctx IWireContext) {
	localctx = NewWireContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, KfnParserRULE_wire)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(52)
		p.WireStmt()
	}

	return localctx
}

// IWireStmtContext is an interface to support dynamic dispatch.
type IWireStmtContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsWireStmtContext differentiates from other interfaces.
	IsWireStmtContext()
}

type WireStmtContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyWireStmtContext() *WireStmtContext {
	var p = new(WireStmtContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = KfnParserRULE_wireStmt
	return p
}

func (*WireStmtContext) IsWireStmtContext() {}

func NewWireStmtContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *WireStmtContext {
	var p = new(WireStmtContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = KfnParserRULE_wireStmt

	return p
}

func (s *WireStmtContext) GetParser() antlr.Parser { return s.parser }

func (s *WireStmtContext) AllWireElement() []IWireElementContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IWireElementContext)(nil)).Elem())
	var tst = make([]IWireElementContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IWireElementContext)
		}
	}

	return tst
}

func (s *WireStmtContext) WireElement(i int) IWireElementContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IWireElementContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IWireElementContext)
}

func (s *WireStmtContext) ARROW() antlr.TerminalNode {
	return s.GetToken(KfnParserARROW, 0)
}

func (s *WireStmtContext) WireStmt() IWireStmtContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IWireStmtContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IWireStmtContext)
}

func (s *WireStmtContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *WireStmtContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *WireStmtContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KfnListener); ok {
		listenerT.EnterWireStmt(s)
	}
}

func (s *WireStmtContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KfnListener); ok {
		listenerT.ExitWireStmt(s)
	}
}

func (s *WireStmtContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case KfnVisitor:
		return t.VisitWireStmt(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *KfnParser) WireStmt() (localctx IWireStmtContext) {
	localctx = NewWireStmtContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 12, KfnParserRULE_wireStmt)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(54)
		p.WireElement()
	}
	{
		p.SetState(55)
		p.Match(KfnParserARROW)
	}
	p.SetState(58)
	p.GetErrorHandler().Sync(p)
	switch p.GetInterpreter().AdaptivePredict(p.GetTokenStream(), 3, p.GetParserRuleContext()) {
	case 1:
		{
			p.SetState(56)
			p.WireElement()
		}

	case 2:
		{
			p.SetState(57)
			p.WireStmt()
		}

	}

	return localctx
}

// IWireElementContext is an interface to support dynamic dispatch.
type IWireElementContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsWireElementContext differentiates from other interfaces.
	IsWireElementContext()
}

type WireElementContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyWireElementContext() *WireElementContext {
	var p = new(WireElementContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = KfnParserRULE_wireElement
	return p
}

func (*WireElementContext) IsWireElementContext() {}

func NewWireElementContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *WireElementContext {
	var p = new(WireElementContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = KfnParserRULE_wireElement

	return p
}

func (s *WireElementContext) GetParser() antlr.Parser { return s.parser }

func (s *WireElementContext) Component() IComponentContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IComponentContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IComponentContext)
}

func (s *WireElementContext) Ident() IIdentContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IIdentContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IIdentContext)
}

func (s *WireElementContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *WireElementContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *WireElementContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KfnListener); ok {
		listenerT.EnterWireElement(s)
	}
}

func (s *WireElementContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KfnListener); ok {
		listenerT.ExitWireElement(s)
	}
}

func (s *WireElementContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case KfnVisitor:
		return t.VisitWireElement(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *KfnParser) WireElement() (localctx IWireElementContext) {
	localctx = NewWireElementContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 14, KfnParserRULE_wireElement)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(62)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case KfnParserLOWER_IDENT, KfnParserSTRING_LITERAL:
		{
			p.SetState(60)
			p.Component()
		}

	case KfnParserUPPER_IDENT:
		{
			p.SetState(61)
			p.Ident()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IComponentContext is an interface to support dynamic dispatch.
type IComponentContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsComponentContext differentiates from other interfaces.
	IsComponentContext()
}

type ComponentContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyComponentContext() *ComponentContext {
	var p = new(ComponentContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = KfnParserRULE_component
	return p
}

func (*ComponentContext) IsComponentContext() {}

func NewComponentContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ComponentContext {
	var p = new(ComponentContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = KfnParserRULE_component

	return p
}

func (s *ComponentContext) GetParser() antlr.Parser { return s.parser }

func (s *ComponentContext) ComponentIdent() IComponentIdentContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IComponentIdentContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IComponentIdentContext)
}

func (s *ComponentContext) ComponentValue() IComponentValueContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IComponentValueContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IComponentValueContext)
}

func (s *ComponentContext) COMPONENT_OPTION_SEP() antlr.TerminalNode {
	return s.GetToken(KfnParserCOMPONENT_OPTION_SEP, 0)
}

func (s *ComponentContext) ComponentOptionList() IComponentOptionListContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IComponentOptionListContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IComponentOptionListContext)
}

func (s *ComponentContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ComponentContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ComponentContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KfnListener); ok {
		listenerT.EnterComponent(s)
	}
}

func (s *ComponentContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(KfnListener); ok {
		listenerT.ExitComponent(s)
	}
}

func (s *ComponentContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case KfnVisitor:
		return t.VisitComponent(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *KfnParser) Component() (localctx IComponentContext) {
	localctx = NewComponentContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 16, KfnParserRULE_component)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()
